<resources>
    <string name="app_name">IQ Master</string>

    <string name="splash_screen_txt">IQ Master</string>
    <string name="splash_screen_sec_txt">Take the challenge Now !</string>

    <string name="home_screen_prim_txt">Welcome, to IQ Master ! </string>
    <string name="home_screen_sec_txt">Your one-stop destination for increasing IQ</string>
    <string name="home_screen_ter_txt">Click the button 👇 to take a quiz now</string>
    <string name="home_screen_btn_txt">Take a Quiz</string>

    <string name="home_screen_toolbar_menu_item_1">Feedback</string>

    <string name="feedback_menu_title_txt">If you reached here on your own, then you really want us to improve !</string>
    <string name="feedback_menu_sub_txt">Please rate our app, and give us your valuable feedback -</string>
    <string name="feedback_submit_btn_text">Submit</string>

    <string name="all_quizzes_txt">Please, choose any of the given quizzes - </string>

    <string name="quiz_submit_btn_text">Next</string>

    <string name="quiz_results_heading"><u>Results</u></string>

</resources>