<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/baltic_sea"
    android:fitsSystemWindows="true"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/feedback_screen_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/peri_winkle"
        android:minHeight="@dimen/home_screen_toolbar_min_height"
        android:paddingTop="10dp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:titleMarginBottom="20dp"
        app:titleTextColor="@color/gentle_breeze" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:padding="10dp"
        android:text="@string/feedback_menu_title_txt"
        android:textColor="@color/peri_winkle"
        android:textSize="@dimen/home_screen_prim_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feedback_screen_toolbar" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:padding="10dp"
        android:text="@string/feedback_menu_sub_txt"
        android:textColor="@color/peri_winkle"
        android:textSize="@dimen/home_screen_sec_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />


    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:isIndicator="false"
        android:numStars="5"
        android:stepSize="0.5"
        android:theme="@style/ratingBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

<!--    Use ScrollView here-->
    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/gentle_breeze"
        android:padding="3dp"
        android:textColor="@color/baltic_sea"
        android:textSize="@dimen/feedback_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar"
        app:layout_constraintVertical_bias="0.195"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/submit_feedback_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/feedback_submit_btn_text"
        android:textAllCaps="false"
        android:textColor="@color/baltic_sea"
        android:textSize="@dimen/home_screen_btn_size"
        style="@style/CustomButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText1" />

</androidx.constraintlayout.widget.ConstraintLayout>